[package]
name = "winston"
version = "0.1.0"
edition = "2021"
about = "ChatGPT on the command line"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive", "env"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
toml = "0.7.3"
